movie module CRUD

--- a/src/app/movies/movie/movie.component.scss
+++ b/src/app/movies/movie/movie.component.scss
@@ -1,7 +1,4 @@
-.wtHolder {
-    width: 100% !important;
-       }
-    
-    .ht_clone_left .wtHolder {
-      overflow:hidden;
-      }
+.add-btn {
+   height: 40px;
+   margin-right: 4px;
+}
