--- a/src/app/movies/movie/movie.component.html
+++ b/src/app/movies/movie/movie.component.html
@@ -1,3 +1,24 @@
-<div>
-    <hot-table [settings]="hotSettings"></hot-table>
+<div class="p-3">
+  <h1>Movie List</h1>
+</div>
+<div class="p-3">
+  <div class="d-flex">
+    <button type="button" (click) = "openModal()" class="btn btn-primary add-btn">Add From Modal</button>
+    <button type="button" (click) = "addRow()" class="btn btn-primary add-btn">Add New Row</button>
+    <nav aria-label="...">
+      <ul class="pagination">
+        <li class="page-item" [ngClass] = "{'disabled' : currentIndex === 0}">
+          <a class="page-link" (click) ="renderPage(currentIndex - 1)">Previous</a>
+        </li>
+        <li class="page-item" *ngFor="let item of pageIndex" [ngClass]="{'active' : item === currentIndex }">
+          <a class="page-link"  (click) ="renderPage(item)" >{{item + 1}}</a>
+        </li>
+        <li class="page-item" [ngClass] = "{'disabled' : currentIndex === pages - 1}">
+          <a class="page-link" (click) ="renderPage(currentIndex + 1)" >Next</a>
+        </li>
+      </ul>
+    </nav>
   </div>
+
+  <hot-table [hotId]="id"  [settings]="hotSettings"></hot-table>
+</div>
