--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~handsontable/dist/handsontable.full.css';
+a:hover{
+    cursor: pointer;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.mat-dialog-container {
+    padding: 0 !important
+   }
