--- a/src/app/movies/movie/movie.component.html
+++ b/src/app/movies/movie/movie.component.html
@@ -1,7 +1,7 @@
-<div class="p-3">
+<div class="p-1 mt-1">
   <h1>Movie List</h1>
 </div>
-<div class="p-3">
+<div class="p-1">
   <div class="d-flex">
     <button type="button" (click) = "openModal()" class="btn btn-primary add-btn">Add From Modal</button>
     <button type="button" (click) = "addRow()" class="btn btn-primary add-btn">Add New Row</button>
