--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -1,6 +1,6 @@
 .navbar {
     min-height: 70px;
-    position: fixed;
-    width: 100%;
+    // position: fixed;
+    // width: 100%;
     z-index: 999;
 }
